--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,86 @@
-#HELP.md
-#target/
-#!.mvn/wrapper/maven-wrapper.jar
-#!**/src/main/**/target/
-#!**/src/test/**/target/
-#
-#### STS ###
-#.apt_generated
-#.classpath
-#.factorypath
-#.project
-#.settings
-#.springBeans
-#.sts4-cache
-#
-#### IntelliJ IDEA ###
-#.idea
-#*.iws
-#*.iml
-#*.ipr
-#
-#### NetBeans ###
-#/nbproject/private/
-#/nbbuild/
-#/dist/
-#/nbdist/
-#/.nb-gradle/
-#build/
-#!**/src/main/**/build/
-#!**/src/test/**/build/
-#
-#### VS Code ###
-#.vscode/
-#.c
+# IntelliJ IDEA 相关文件
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Eclipse 相关文件
+.settings/
+.project
+.classpath
+
+# 部署文件夹
+**/deploy/
+
+# 编译后的类文件
+*.class
+
+# Maven 构建目录
+target/
+
+# 系统崩溃日志
+hs_err_pid*
+
+# 临时文件
+**/*.log
+**/*.cache
+*.diff
+*.patch
+**/*.tmp
+
+# 包文件
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# Git 合并产生的备份文件
+*.orig
+
+# 特定文件
+**/ArcFace64.dat
+
+# Gradle 相关文件
+.gradle/
+build/
+
+# Junit 测试报告
+TEST-*.xml
+junitreports/
+
+# Mac 系统文件
+.DS_Store
+
+# Windows 系统文件
+Thumbs.db
+
+# Linux 系统文件
+*~
+
+# Node.js 依赖
+node_modules/
+
+# Python 编译产物
+__pycache__/
+*.py[cod]
+
+# 日志文件
+*.log
+
+# 环境变量文件
+.env
+
+# 数据库文件
+*.db
+*.sql
+*.sqlite
+
+# Office Temp 文件
+~$*
